--- a/weather/templates/weather/summary.html
+++ b/weather/templates/weather/summary.html
@@ -8,25 +8,24 @@
     <table>
         <thead>
             <tr>
-                <th>Date</th>
                 <th>City</th>
-                <th>Average Temp</th>
-                <th>Max Temp</th>
-                <th>Min Temp</th>
-                <th>Dominant Condition</th>
+                <th>Main Condition</th>
+                <th>Temprature</th>
+                <th>Feels Like</th>
+                <th> Time Stamp</th>
             </tr>
         </thead>
         <tbody>
-            {% for summary in summaries %}
+            {% for update in updates %}
             <tr>
-                <td>{{ summary.date }}</td>
-                <td>{{ summary.city }}</td>
-                <td>{{ summary.average_temperature }}</td>
-                <td>{{ summary.max_temperature }}</td>
-                <td>{{ summary.min_temperature }}</td>
-                <td>{{ summary.dominant_condition }}</td>
+                <td>{{ update.city }}</td>
+                <td>{{ update.main_condition }}</td>
+                <td>{{ update.temperature }}</td>
+                <td>{{ update.feels_like }}</td>
+                <td>{{ update.timestamp }}</td>
             </tr>
             {% endfor %}
+            
         </tbody>
     </table>
 </body>
